--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
 
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -36,19 +37,21 @@ li, a, button {
 }
 
 .nav {
-    display: block;
+    display: flex;
     width: 100%;
+    padding: 10px;
     list-style: none;
-    text-align: end;
+    text-align: center;
     overflow: hidden;
-    
-    
+    background-color: #D9D9D9;
+    justify-content: flex-end;
 }
 
 .nav li {
-    display: inline;
+    display: inline-flex;
     padding: 0px 20px;
     background-color: #D9D9D9;
+    text-transform: uppercase;
 }
 
 .nav a {
@@ -59,6 +62,8 @@ li, a, button {
 
 .nav li a:hover {
     color: #284B63;
+    border-radius: 3px;
+    
 }
 
 button{
@@ -66,11 +71,13 @@ button{
     padding: 9px 25px;
     background-color: #D9D9D9;
     color: white;
+    text-transform: uppercase;
 
 
 }
 button:hover{
     background-color: #284B63;
+    border-radius: 4px;
 }
 
 ul {
@@ -92,69 +99,71 @@ figcaption{
 }
 .log{
     background-color: white;
-    display: inline-flex;
+    display: flex;
+}
+
+@media screen and (max-width: 739px) {
+    .sec1{
+        display:flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }  /* rules for small screens */
+}
+@media screen and (min-width: 740px) {
+    .sec1{
+        display:flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin-top: 100px;
+        min-height: 40vh;
+        
+    } /* rules for large screens */
     
 }
 
-.sec1{
-    display: inline;
-    background-image: url("../images/pen.jpg");
-    width: 100%;
-    height: 100%;
-    align-content: center;
-    margin: 50px;
+
+.sec1 div{
+border: 1px #284B63 solid ;
+padding: 10px;
+margin: 20px;
 
 }
 
-.teach1,.teach2,.teach3{
-    margin: 50px;
-    padding-left: 10px;
-    width: 25%;
+.teach{
+    
     background-color: #284B63;
-    opacity: 0.6;   
-}
-.teach1{
-    float: left;
-    margin-left: 100px;
-    display: block;
-    height: 100%;
-    align-content: space-around;
-}
-.teach2{
-    float: left;
-    display: block;
-    height: 100%;
-    align-content: space-around;
+    opacity: 0.6; 
+    flex: 1;
+    border-radius: 5px;
     
-}
-.teach3{
-    float:left;
-    display: block;
-    height: 100%;
-    align-content: space-around;
 }
 
 p{ 
-    background-color: #284B63;
+    
     color: lightgray;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     text-indent: 10px;
     
 
 }
 h3{
-    background-color: #284B63;
+    
     font-family: "Montserrat" sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     color: white;
 }
+
+
 .h1 {
     float: left;
     padding: 20px;
     color: grey;
 }
+
 
 .log2{
     cursor: pointer;
