--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ figcaption{
         flex-wrap: wrap;
         flex-direction: row;
         margin-top: 100px;
+        margin-bottom: 130px;
         min-height: 40vh;
         
     } /* rules for large screens */
@@ -176,20 +177,59 @@ h3{
     padding: 30px 10px;
     background-color: white;
 }
-.lg1{
-    background-color:rgba(0, 0, 0, 0.76);
+
+.form1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
 }
-.row{
-    align-self: center;
+.login-form{
+    background-color: #284B63;
+    opacity: 0.6;
+    padding: 10px;
+    margin-top: 100px;
+    border-radius: 5px;
 }
-.lg2{
-    background-color:rgba(0, 0, 0, 0.25); 
-    padding:10px 20px 20px 20px;
-    top:30%; left:25%;right:25%;
+.form-input-material {
+    --input-default-border-color: white;
+    --input-border-bottom-color: white;
+    
+}
+.btn {
+    padding: 8px 20px;
+    border-radius: 0;
+    overflow: hidden;
+}
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 40px;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
-    position:absolute;
-    align-self:center
+    box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109),
+    0 1px 1px rgba(128, 128, 128, 0.155),
+    0 2.1px 2.1px rgba(128, 128, 128, 0.195),
+    0 4.4px 4.4px rgba(128, 128, 128, 0.241),
+    0 12px 12px rgba(128, 128, 128, 0.35);
 }
-.form-group{
-    align-self:center;display: inline-block;padding: 10px;
+
+.form-input-material {
+    margin: 12px 0;
+    }
+
+.btn {
+        width: 100%;
+        margin: 18px 0 9px 0;
+    }
+
+.form-control-material{
+    display: flex;
+}
+
+.sec2{
+    background-color: white;
 }
