--- a/css/style.css
+++ b/css/style.css
@@ -232,4 +232,57 @@ h3{
 
 .sec2{
     background-color: white;
+    height: 100vh;
+}
+@media screen and (min-width: 740px){
+    /* rules for big screens */
+.founders{
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    
+}
+}
+@media screen and (max-width: 739px) {
+    .founders{
+        display:flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }  /* rules for small screens */
+
+}
+
+.bongo{
+    flex: 1;
+    width: 200px;
+    border-radius: 50%;
+    
+    
+}
+.found1{
+    flex: 1 ;
+    
+}
+
+.box{
+    flex: 0 0 20%;
+    align-self: center;
+    justify-content: center;
+}
+.sine{
+    color: #284B63;
+    text-transform:capitalize;
+    text-align: center;
+    padding: 20px;
+}
+.para2{
+    flex: 1;
+}
+.h11{
+    text-align: center;
+    color: #284B63 ;
+    font-size: 30px;
+    padding: 20px;
+    font-weight: bolder;
+    font-family: "Montserrat" sans-serif;
 }
