--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,13 @@ li, a, button {
     padding: 30px 10px;
     background-color: white;
 }
-figcaption{
-    font-size: 10vw;
+
+.fig{
+    font-size: 4vw;
 }
 .logo {
     cursor: pointer;
-    height: 100px;
+    width: 7vw;
 
 }
 
