--- a/css/style.css
+++ b/css/style.css
@@ -233,25 +233,41 @@ h3{
     display: flex;
 }
 
-.sec2{
-    background-color: white;
-    height: 100vh;
-}
+
 @media screen and (min-width: 740px){
     /* rules for big screens */
+    .sec2{
+        background-color: white;
+        height: 100vh;
+    }
+
 .founders{
     display: flex;
     justify-content: space-between;
     align-content: center;
     
 }
+.found1 img{
+    margin-left: 15vw;
+    
+}
+
 }
 @media screen and (max-width: 739px) {
+    .sec2{
+        background-color: white;
+        height: 200vh;
+    }
     .founders{
         display:flex;
         justify-content: space-between;
         flex-direction: column;
-    }  /* rules for small screens */
+    }  
+    
+    .found1 img{
+        margin-left: 20vw;
+        
+    }/* rules for small screens */
 
 }
 
@@ -259,19 +275,14 @@ h3{
     flex: 1;
     width: 200px;
     border-radius: 50%;
-    
+    height:250px;
     
 }
 .found1{
-    flex: 1 ;
-    
+    background-color: white;
+    margin: 30px;
 }
 
-.box{
-    flex: 0 0 20%;
-    align-self: center;
-    justify-content: center;
-}
 .sine{
     color: #284B63;
     text-transform:capitalize;
@@ -284,8 +295,9 @@ h3{
 .h11{
     text-align: center;
     color: #284B63 ;
-    font-size: 30px;
-    padding: 20px;
+    font-size: 50px;
+    padding: 50px;
+    margin: 50px;
     font-weight: bolder;
     font-family: "Montserrat" sans-serif;
 }
